--- a/masterapp/index.html
+++ b/masterapp/index.html
@@ -6,7 +6,7 @@
 
 	<script type="text/javascript">
 		
-		var exampleSocket = new WebSocket("ws://api.seawall.horse/");
+		var exampleSocket = new WebSocket("wss://api.seawall.horse/");
 
 		exampleSocket.onopen = function(event) {
 			console.log('opened socket');
