--- a/playerapp/index.html
+++ b/playerapp/index.html
@@ -1,1 +1,56 @@
-PLAYER APP INDEX
+<html>
+<head>
+</head>
+<body>
+	PLAYER APP INDEX
+
+	<script type="text/javascript">
+		
+		var exampleSocket = new WebSocket("wss://api.seawall.horse/");
+		var activeRoomId;
+
+		exampleSocket.onopen = function(event) {
+			console.log('opened socket');
+		};
+
+		function joinRoom() {
+			var roomIdBox = document.getElementById('roomid');
+			var roomId = roomIdBox.value;
+			activeRoomId = roomId;
+
+			exampleSocket.send(JSON.stringify({
+				action: 'join',
+				roomId: roomId
+			}));
+		}
+
+		function sendMessage() {
+			var messageBox = document.getElementById('messagebox');
+			var textToSend = messageBox.value;
+
+			exampleSocket.send(JSON.stringify({
+				action: 'testMsg',
+				message: textToSend,
+				roomId: activeRoomId
+			}));
+		}
+
+		exampleSocket.onmessage = function(event){
+			console.log(event.data);
+			document.getElementById('response-div').innerHTML = text;
+		};
+	</script>
+	<br>
+	<input type="text" id="roomid">
+	<button onclick="joinRoom()">Join a room</button>
+	<br>
+	<input type="text" id="messagebox">
+	<button onclick="sendMessage()">Send message</button>
+	<br> 
+	<div id="response-div"></div>
+
+</body>
+</html>
+
+
+
