--- a/playerapp/index.html
+++ b/playerapp/index.html
@@ -4,6 +4,12 @@
   <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+  <style>
+body {
+    background-color: #45B29D;
+}
+</style>
+
 </head>
 <body>
   PLAYER APP INDEX
@@ -12,6 +18,9 @@
     
     var exampleSocket = new WebSocket("wss://api.seawall.horse/");
     var activeRoomId;
+    var reVote = /start.*Voting/;
+    var reSub = /startSubmitting.*/;
+
     exampleSocket.onopen = function(event) {
       console.log('opened socket');
     };
@@ -28,14 +37,13 @@
         userName: userName
       }));
       $("#join").hide();
-      $("#faces").show();
     }
     function sendMessage() {
       var messageBox = document.getElementById('messagebox');
       var textToSend = messageBox.value;
       exampleSocket.send(JSON.stringify({
-        action: 'testMsg',
-        message: textToSend,
+        action: 'submitFeedback',
+        feedback: textToSend,
         roomId: activeRoomId,
         userName: activeUserName
       }));
@@ -48,12 +56,23 @@
         userName: activeUserName,
         vote: vote
       }));
+      $("#faces").hide();
+      document.getElementById('response-div').innerHTML = "";
     }
+
     exampleSocket.onmessage = function(event){
       console.log(event.data);
       var resp = JSON.parse(event.data);
-      var output = resp.state + '<br>' + event.data;
-      document.getElementById('response-div').innerHTML = output;
+      if (resp.info === 'userJoined') {
+        document.getElementById('response-div').innerHTML = 
+            'WAITING FOR OTHERS........' + '<br>' + JSON.stringify(resp);
+      } else if (reVote.test(resp.info)) {
+        $("#send").hide();
+        $("#faces").show();
+        document.getElementById('response-div').innerHTML = resp.itemInfo;
+      } else if (reSub.test(resp.info)) {
+        $("#send").show();
+      }
     };
   </script>
 
@@ -69,7 +88,7 @@
           <label class="sr-only" for="roomid">UserName</label>
           <input type="text" class="form-control" id="username" placeholder="Username">
 
-          <button type="button" class="btn btn-outline-primary"
+          <button type="button" class="btn btn-info"
               onclick="joinRoom()">Join a room</button>
           </div> <!-- join -->
 
@@ -77,18 +96,20 @@
           <div id="send" style="display:none">
           <label class="sr-only" for="messagebox">Room</label>
           <input type="text" class="form-control mb-2 mr-sm-2 mb-sm-0" id="messagebox">
-          <button type="button" class="btn btn-outline-success"
+          <button type="button" class="btn btn-info"
               onclick="sendMessage()">Send message</button>
           </div> <!-- send -->
         </form>
 
-        <div id="faces" style="display:none">
-          <img src="happy.jpg" onclick="sendVote(1)">
-          <img src="angry.jpg" onclick="sendVote(0)">
-        </div>
-
         <!-- response -->
         <div id="response-div"></div>
+
+        <div id="faces" style="display:none">
+          <img src="happy.png" onclick="sendVote(1)">
+          <img src="sad.png" onclick="sendVote(0)">
+        </div>
+
+
       </div>
     </div> <!-- row -->
 
