--- a/masterapp/index.html
+++ b/masterapp/index.html
@@ -104,6 +104,7 @@
 				case 'SHOW_ACTION_ITEMS_RESULTS':
 					document.getElementById('playersubmissionstatus').style.display = "none";
 					document.getElementById('actionResults').style.display = "";
+					document.getElementById('actionItem').style.display = "none";
 					document.getElementById('voteResults').style.display = "none";
 					document.getElementById('actionResults').innerHTML = "You completed " + message.actionItemsCompletedNumber + " / " + message.actionItemsTotalNumber + " action items!";
 					break;
@@ -146,6 +147,7 @@
 				case 'VIEW_ALL_SADS':
 					document.getElementById('playersubmissionstatus').style.display = "none";
 					document.getElementById('voteResults').style.display = "none";
+					document.getElementById('actionItem').style.display = "none";
 					document.getElementById('sadsResults').style.display = "";
 					message.feedback.forEach(function(feedback) {
 						document.getElementById('sadsResults').innerHTML += feedback.feedbackText + " -- score: " + feedback.score + "<br>";
@@ -192,6 +194,7 @@
 					break;
 				case 'VIEW_ALL_HAPPIES':
 					document.getElementById('playersubmissionstatus').style.display = "none";
+					document.getElementById('actionItem').style.display = "none";
 					document.getElementById('voteResults').style.display = "none";
 					document.getElementById('happiesResults').style.display = "";
 					message.feedback.forEach(function(feedback) {
