--- a/masterapp/index.html
+++ b/masterapp/index.html
@@ -113,6 +113,7 @@
 						document.getElementById('playersubmissionstatus').style.display = "";
 						updatePLayerSubmissionStatus(message.whoSubmitted);
 					}
+					document.getElementById('actionItem').style.display = "none";
 					document.getElementById('actionResults').style.display = "none";
 					document.getElementById('voteResults').style.display = "none";
 					document.getElementById('submitSads').style.display = "";
